crates/otlyra-layout/src/snapshots/otlyra_layout__tests__a_block_document_becomes_a_block_tree.snap
---
source: crates/otlyra-layout/src/lib.rs
expression: "dump::serialize(&tree)"
---
BLOCK (initial containing block) font=16px
  BLOCK html font=16px
    BLOCK body font=16px
      BLOCK div font=16px
        BLOCK p font=16px
          TEXT "text"
